questions displaying on the screen after the start quiz button click

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <!-- question texts -->
         <div class="question-wrapper">
-            <p id="intro-text" class="intro-text">Try to answer following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
+            <p id="intro-text" class="intro-text">Try to answer following code-related questions within the time limit.<br> Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
         </div>
         <!-- multiple choice answers and buttons -->
         <div id="answers-group">
