add functionality to save user info in the localStorage

--- a/index.html
+++ b/index.html
@@ -39,12 +39,16 @@
             </div>
         </div>
         <!-- correct or wrong answer status -->
-        <div id="answer-status">
-            <p id="answer-status"></p> <!-- class="answer-status" -->
+        <!-- <div id="answer-status">
+            <p id="answer-status"></p> class="answer-status" -->
             
-        </div>
+        <!-- </div> -->
     </main>
-    
+    <div id="answer-status-container">
+        <div id="answer-status">
+            <p id="answer-status"></p> <!-- class="answer-status" -->            
+        </div>
+    </div>
 
     <script src="../code-quiz/assets/js/script.js"></script>
 </body>
